// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HourTargets > renders correctly if primary unit and total quantity is shown 1`] = `
<div
  class="targets"
  data-v-24d812aa=""
>
  
  <div
    class="target"
    data-v-24d812aa=""
    style="font-size: 16px; flex-direction: row;"
  >
    
    
    
    <span
      aria-describedby="v-tooltip-v-0"
      data-v-24d812aa=""
    >
      <span
        class="quantity"
        data-v-24d812aa=""
        style="color: rgb(224, 28, 33);"
      >
        100
      </span>
      <span
        class="hour-target"
        data-v-24d812aa=""
      >
        /100
      </span>
    </span>
    
    
    <!--teleport start-->
    <!--teleport end-->
    
  </div>
  <div
    class="target"
    data-v-24d812aa=""
    style="font-size: 16px; flex-direction: row;"
  >
    
    
    
    <span
      aria-describedby="v-tooltip-v-1"
      data-v-24d812aa=""
    >
      <span
        class="quantity"
        data-v-24d812aa=""
        style="color: rgb(224, 28, 33);"
      >
        60
      </span>
      <span
        class="hour-target"
        data-v-24d812aa=""
      >
        /100
      </span>
    </span>
    
    
    <!--teleport start-->
    <!--teleport end-->
    
  </div>
  <div
    class="target"
    data-v-24d812aa=""
    style="font-size: 16px; flex-direction: row;"
  >
    
    
    
    <span
      aria-describedby="v-tooltip-v-2"
      data-v-24d812aa=""
    >
      <span
        class="quantity"
        data-v-24d812aa=""
        style="color: rgb(224, 28, 33);"
      >
        40
      </span>
      <span
        class="hour-target"
        data-v-24d812aa=""
      >
        /100
      </span>
    </span>
    
    
    <!--teleport start-->
    <!--teleport end-->
    
  </div>
  
</div>
`;

exports[`HourTargets > renders correctly if secondary unit and good quantity is shown 1`] = `
<div
  class="targets"
  data-v-24d812aa=""
>
  
  <div
    class="target"
    data-v-24d812aa=""
    style="font-size: 16px; flex-direction: row;"
  >
    
    
    
    <span
      aria-describedby="v-tooltip-v-0"
      data-v-24d812aa=""
    >
      <span
        class="quantity"
        data-v-24d812aa=""
        style="color: rgb(224, 28, 33);"
      >
        9
      </span>
      <span
        class="hour-target"
        data-v-24d812aa=""
      >
        /10
      </span>
    </span>
    
    
    <!--teleport start-->
    <!--teleport end-->
    
  </div>
  <div
    class="target"
    data-v-24d812aa=""
    style="font-size: 16px; flex-direction: row;"
  >
    
    
    
    <span
      aria-describedby="v-tooltip-v-1"
      data-v-24d812aa=""
    >
      <span
        class="quantity"
        data-v-24d812aa=""
        style="color: rgb(224, 28, 33);"
      >
        5
      </span>
      <span
        class="hour-target"
        data-v-24d812aa=""
      >
        /10
      </span>
    </span>
    
    
    <!--teleport start-->
    <!--teleport end-->
    
  </div>
  <div
    class="target"
    data-v-24d812aa=""
    style="font-size: 16px; flex-direction: row;"
  >
    
    
    
    <span
      aria-describedby="v-tooltip-v-2"
      data-v-24d812aa=""
    >
      <span
        class="quantity"
        data-v-24d812aa=""
        style="color: rgb(224, 28, 33);"
      >
        3
      </span>
      <span
        class="hour-target"
        data-v-24d812aa=""
      >
        /10
      </span>
    </span>
    
    
    <!--teleport start-->
    <!--teleport end-->
    
  </div>
  
</div>
`;

exports[`HourTargets > renders correctly if secondary unit and total quantity is shown 1`] = `
<div
  class="targets"
  data-v-24d812aa=""
>
  
  <div
    class="target"
    data-v-24d812aa=""
    style="font-size: 16px; flex-direction: row;"
  >
    
    
    
    <span
      aria-describedby="v-tooltip-v-0"
      data-v-24d812aa=""
    >
      <span
        class="quantity"
        data-v-24d812aa=""
        style="color: rgb(224, 28, 33);"
      >
        10
      </span>
      <span
        class="hour-target"
        data-v-24d812aa=""
      >
        /10
      </span>
    </span>
    
    
    <!--teleport start-->
    <!--teleport end-->
    
  </div>
  <div
    class="target"
    data-v-24d812aa=""
    style="font-size: 16px; flex-direction: row;"
  >
    
    
    
    <span
      aria-describedby="v-tooltip-v-1"
      data-v-24d812aa=""
    >
      <span
        class="quantity"
        data-v-24d812aa=""
        style="color: rgb(224, 28, 33);"
      >
        6
      </span>
      <span
        class="hour-target"
        data-v-24d812aa=""
      >
        /10
      </span>
    </span>
    
    
    <!--teleport start-->
    <!--teleport end-->
    
  </div>
  <div
    class="target"
    data-v-24d812aa=""
    style="font-size: 16px; flex-direction: row;"
  >
    
    
    
    <span
      aria-describedby="v-tooltip-v-2"
      data-v-24d812aa=""
    >
      <span
        class="quantity"
        data-v-24d812aa=""
        style="color: rgb(224, 28, 33);"
      >
        4
      </span>
      <span
        class="hour-target"
        data-v-24d812aa=""
      >
        /10
      </span>
    </span>
    
    
    <!--teleport start-->
    <!--teleport end-->
    
  </div>
  
</div>
`;

exports[`HourTargets > renders correctly when primary unit and good qty are shown 1`] = `
<div
  class="targets"
  data-v-24d812aa=""
>
  
  <div
    class="target"
    data-v-24d812aa=""
    style="font-size: 16px; flex-direction: row;"
  >
    
    
    
    <span
      aria-describedby="v-tooltip-v-0"
      data-v-24d812aa=""
    >
      <span
        class="quantity"
        data-v-24d812aa=""
        style="color: rgb(224, 28, 33);"
      >
        90
      </span>
      <span
        class="hour-target"
        data-v-24d812aa=""
      >
        /100
      </span>
    </span>
    
    
    <!--teleport start-->
    <!--teleport end-->
    
  </div>
  <div
    class="target"
    data-v-24d812aa=""
    style="font-size: 16px; flex-direction: row;"
  >
    
    
    
    <span
      aria-describedby="v-tooltip-v-1"
      data-v-24d812aa=""
    >
      <span
        class="quantity"
        data-v-24d812aa=""
        style="color: rgb(224, 28, 33);"
      >
        50
      </span>
      <span
        class="hour-target"
        data-v-24d812aa=""
      >
        /100
      </span>
    </span>
    
    
    <!--teleport start-->
    <!--teleport end-->
    
  </div>
  <div
    class="target"
    data-v-24d812aa=""
    style="font-size: 16px; flex-direction: row;"
  >
    
    
    
    <span
      aria-describedby="v-tooltip-v-2"
      data-v-24d812aa=""
    >
      <span
        class="quantity"
        data-v-24d812aa=""
        style="color: rgb(224, 28, 33);"
      >
        30
      </span>
      <span
        class="hour-target"
        data-v-24d812aa=""
      >
        /100
      </span>
    </span>
    
    
    <!--teleport start-->
    <!--teleport end-->
    
  </div>
  
</div>
`;
